# Using-Streamlit-for-web-application.

./: Banco_de_dados.csv  Cadastro_clientes.py  README.md  pyproject.toml
pages/: Dados_cadastrados.py
